changed image ratio on items index page to correct distortion

--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -402,7 +402,6 @@ body.item {
 			
 			img {	
 				display: block;
-				width: 450px;
 				height: 400px;		
 			};
 
